dnl Process this file with autoconf to produce a configuration script.
AC_INIT(novdoc-schema, 1.1)
AC_CONFIG_SRCDIR([Makefile.am])
AM_INIT_AUTOMAKE
dnl AM_INIT_AUTOMAKE(book, 10.0)
dnl AC_INIT(make/common.mk)
dnl AC_CANONICAL_HOST

AC_CONFIG_SUBDIRS(make)

dnl make/Makefile
AC_CONFIG_FILES([
Makefile
bin/Makefile
etc/Makefile
schema/Makefile
xslt/Makefile
])
AC_OUTPUT
