[metadata]
name = daps_xmlwellformed
version = 0.3.0
description = "Create edit and export daily, weekly, or monthly reports"
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Schraitle
author_email = toms@suse.de
url = https://github.com/tomschr/daps-xmlwellformed
download_url = https://github.com/tomschr/daps-xmlwellformed/download
license_file =  LICENSE
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
    Topic :: Text Processing

[sdist]
formats = bztar, zip

[options]
scripts =
    bin/daps-xmlwellformed
python_requires = >=3.6.*
include_package_data = True

[tool:pytest]
norecursedirs = .git .env/ .pyenv/ .tmp/ .eggs/ dist/ build/
testpaths = bin/ tests
addopts =
    --ignore=.eggs/
    --ignore=tests/dxwf.py
    --doctest-modules
    --doctest-report ndiff
    --cov=dxwf
    --cov-report=term-missing
