[metadata]
name = fix-screen
version = 0.2.0
description = "Fix <screen> elements"
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Schraitle
author_email = toms@suse.de
url = https://github.com/openSUSE/daps
download_url = https://github.com/openSUSE/daps/download
license_file =  LICENSE
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities
    Topic :: Text Processing

[sdist]
formats = bztar, zip

[options]
scripts =
    bin/fix-screen.py
python_requires = >=3.6.*
include_package_data = True

[tool:pytest]
norecursedirs = .git .env/ .pyenv/ .tmp/ .eggs/ dist/ build/
testpaths = bin/ tests
addopts =
    --ignore=.eggs/
    --doctest-modules
    --doctest-report ndiff
    --cov=screen
    --cov-report=term-missing
